--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <title>Redirecting...</title>
-  <script src="redirect.js"></script>
+  <script>
+    const ltLink = "https://tidy-loops-lie.loca.lt"; // Change this as needed
+
+    // Try to redirect immediately
+    fetch(ltLink, { method: "HEAD", mode: "no-cors" })
+      .then(() => {
+        window.location.replace(ltLink); // Faster and cleaner than href
+      })
+      .catch(() => {
+        document.addEventListener("DOMContentLoaded", () => {
+          document.getElementById("manualLink").href = ltLink;
+          alert("Server seems offline. Click the link manually if needed.");
+        });
+      });
+  </script>
 </head>
 <body>
   <p>Redirecting you to the app... If nothing happens, <a id="manualLink" href="#">click here</a>.</p>
