--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <title>Redirecting...</title>
   <style>
-    html, body { display: none; } /* Prevent visible flash */
+    html, body { display: black; } /* Prevent visible flash */
   </style>
   <script>
-    const ltLink = "https://tough-tires-remain.loca.lt"; // Your LT/ngrok link
+    const ltLink = "http://localhost:3000"; // Your LT/ngrok link
 
     // Try redirecting before anything loads visually
     fetch(ltLink, { method: "HEAD", mode: "no-cors" })
