--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     html, body { display: black; } /* Prevent visible flash */
   </style>
   <script>
-    const ltLink = "http://localhost:3000"; // Your LT/ngrok link
+    const ltLink = "https://famous-jars-cheer.loca.lt"; // Your LT/ngrok link
 
     // Try redirecting before anything loads visually
     fetch(ltLink, { method: "HEAD", mode: "no-cors" })
